2013-09-19  Anders Carlsson  <andersca@apple.com>

        Handle null font families.

        Reviewed by Darin Adler.

        * platform/graphics/Font.cpp:
        (WebCore::computeFontGlyphsCacheHash):
        Don't crash when trying to hash null strings.

2013-09-19  Darin Adler  <darin@apple.com>

        Fix a couple mistakes in my recent CSS grammar leak patch
        https://bugs.webkit.org/show_bug.cgi?id=121659

        Reviewed by Alexey Proskuryakov.

        * css/CSSGrammar.y.in: Added initialization to nullptr for some error cases
        that were otherwise leaving a bad value for the result of the production.
        Also fixed a reversed logical expression.

2013-09-19  Yoav Weiss  <yoav@yoav.ws>

        Remove URL decoding in srcset handling
        https://bugs.webkit.org/show_bug.cgi?id=121609

        Reviewed by Benjamin Poulain.

        Tests: fast/hidpi/image-srcset-question-mark.html
               fast/loader/image-src-question-mark.html

        Removed URL decoding from src and srcset's handling algorithm, since they break encoded URLS.

        * html/parser/HTMLParserIdioms.cpp:
        (WebCore::parseImagesWithScaleFromSrcSetAttribute):
        (WebCore::bestFitSourceForImageAttributes):

2013-09-19  Anders Carlsson  <andersca@apple.com>

        Avoid calling AtomicString::lower() in makeFontGlyphsCacheKey
        https://bugs.webkit.org/show_bug.cgi?id=121656

        Reviewed by Darin Adler.

        Instead of lower casing AtomicStrings, store the strings as is and use the case folding
        hash and case insensitive compare to determine equality.

        * platform/graphics/Font.cpp:
        (WebCore::operator==):
        (WebCore::makeFontGlyphsCacheKey):
        (WebCore::computeFontGlyphsCacheHash):

2013-09-19  Darin Adler  <darin@apple.com>

        Fix leaks in CSS parser caused by overwriting owned raw pointers with 0
        https://bugs.webkit.org/show_bug.cgi?id=121655

        Reviewed by Anders Carlsson.
